[kcms/keys] Don't write into a read-only KConfigGroup

KConfigGroups created from const KConfig objects are read-only, but we want to write here

BUG: 493161

SENTRY: SYSTEMSETTINGS-H0